samples/_failures_safe/1761667902_caf372_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_080e0902.c: In function ‘print_menu’:
./samples/SAFE/__tmp_080e0902.c:157:12: error: missing terminating " character
  157 |     printf("1.
      |            ^~~
./samples/SAFE/__tmp_080e0902.c:157:5: error: expected expression at end of input
  157 |     printf("1.
      |     ^~~~~~
./samples/SAFE/__tmp_080e0902.c:157:5: error: expected declaration or statement at end of input
